--- a/charts/templates/rpc-gateway/rpcgw.secret.yaml
+++ b/charts/templates/rpc-gateway/rpcgw.secret.yaml
@@ -1,10 +1,10 @@
-{{ range $network, $data := .Values.proxy }}
+{{ range $network, $data := .Values.rpcgateway }}
 ---
 {{ if $data.secret }}
 apiVersion: v1
 kind: Secret
 metadata:
-  name: {{ include "helpers.fullname" $ }}-proxy-{{ $network }}
+  name: {{ $network }}-{{ include "helpers.fullname" $ }}-rpcgateway-secret
   namespace: {{ include "helpers.namespace" $ | quote }}
 data:
   {{- range $key, $val := $data.secret }}
