--- a/charts/templates/rpc-gateway/rpcgw.serviceaccount.yaml
+++ b/charts/templates/rpc-gateway/rpcgw.serviceaccount.yaml
@@ -1,11 +1,11 @@
-{{ range $network, $data := .Values.proxy }}
+{{ range $network, $data := .Values.rpcgateway }}
 ---
-{{ if $data.serviceAccount.create}}
+{{ if and $data.serviceAccount.create $data.enabled }}
 apiVersion: v1
 kind: ServiceAccount
 metadata:
   namespace: {{ include "helpers.namespace" $ | quote }}
-  name: {{ .serviceAccount.name | default "proxy-sa" }}-{{ $network }}
+  name: {{ $network }}-{{ .serviceAccount.name | default "rpcgateway-sa" }}
 {{ end }}
 {{ end }}
 
