--- a/charts/templates/web/web.secret.yaml
+++ b/charts/templates/web/web.secret.yaml
@@ -1,11 +1,11 @@
-{{ if .Values.front.secret }}
+{{ if .Values.web.secret }}
 apiVersion: v1
 kind: Secret
 metadata:
   namespace: {{ include "helpers.namespace" . | quote }}
-  name: {{ include "helpers.fullname" . }}-front
+  name: {{ include "helpers.fullname" . }}-web-secret
 data:
-  {{- range $key, $val := .Values.front.secret }}
+  {{- range $key, $val := .Values.web.secret }}
   {{ $key }}: {{ $val | quote }}
   {{- end }}
 {{ end }}
