--- a/charts/templates/web/web.serviceaccount.yaml
+++ b/charts/templates/web/web.serviceaccount.yaml
@@ -1,8 +1,8 @@
-{{ if .Values.front.serviceAccount.create}}
+{{ if .Values.web.serviceAccount.create}}
 apiVersion: v1
 kind: ServiceAccount
 metadata:
   namespace: {{ include "helpers.namespace" . | quote }}
-  name: {{ .Values.front.serviceAccount.name | default "front-sa" }}
+  name: {{ .Values.web.serviceAccount.name | default "web-sa" }}
 {{ end }}
 
