--- a/charts/templates/api/api.ingress.yaml
+++ b/charts/templates/api/api.ingress.yaml
@@ -2,7 +2,7 @@
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: {{ include "helpers.fullname" . }}-api
+  name: {{ include "helpers.fullname" . }}-api-ing
   namespace: {{ include "helpers.namespace" . | quote }}
   annotations: 
 {{ toYaml .Values.api.ingress.annotations | indent 4 }}
@@ -10,17 +10,18 @@ metadata:
 {{ toYaml .Values.api.ingress.labels | indent 4 }}
 spec:
   tls:
-  - hosts: {{ .Values.api.ingress.tls.hosts }}
+  - hosts: 
+      - {{ .Values.env.NEXT_PUBLIC_API_HOSTNAME }}
     secretName: {{ .Values.api.ingress.tls.secretName }}
   rules:
-  - host: {{ .Values.api.ingress.host }}
+  - host: {{ .Values.env.NEXT_PUBLIC_API_HOSTNAME }}
     http:
       paths:
-      - path: /
+      - path: {{ .Values.env.NEXT_PUBLIC_API_ROOT_URL }}
         pathType: Prefix
         backend:
           service:
-            name: {{ include "helpers.fullname" . }}-api
+            name: {{ include "helpers.fullname" . }}-api-service
             port:
-              number: {{ .Values.api.service.ports.http }}
+              number: {{ .Values.env.NEXT_PUBLIC_API_PORT}}
 {{- end -}}
