--- a/charts/templates/rpc-gateway/rpcgw.deployment.yaml
+++ b/charts/templates/rpc-gateway/rpcgw.deployment.yaml
@@ -1,80 +1,40 @@
-{{ range $network, $data := .Values.proxy}}
+{{ range $network, $data := .Values.rpcgateway}}
 ---
 {{- if $data.enabled}}
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: {{ include "helpers.fullname" $ }}-proxy-{{ $network }}
+  name: {{ $network }}-{{ include "helpers.fullname" $ }}-rpcgateway
   namespace: {{ include "helpers.namespace" $| quote }}
-  labels: {{ include "helpers.labels.proxy" (dict "root" $ "network" $network)| nindent 4 }}
+  labels: {{ include "helpers.labels.rpcgateway" (dict "root" $ "network" $network)| nindent 4 }}
 spec:
   replicas: {{ $data.replicaCount }}
   selector:
     matchLabels:
-      {{- include "helpers.proxy.selectorLabels" (dict "root" $ "network" $network) | nindent 6 }}
+      {{- include "helpers.rpcgateway.selectorLabels" (dict "root" $ "network" $network) | nindent 6 }}
   template:
     metadata:
       labels:
-        {{- include "helpers.proxy.selectorLabels" (dict "root" $ "network" $network) | nindent 8 }}
+        {{- include "helpers.rpcgateway.selectorLabels" (dict "root" $ "network" $network) | nindent 8 }}
     spec:
-      serviceAccountName: {{ .serviceAccount.name | default "proxy-sa" }}-{{ $network }}
+      serviceAccountName: {{ $network }}-{{ .serviceAccount.name | default "rpcgateway-sa" }}
       containers:
-        - name: proxy-{{ $network }}
+        - name: rpcgateway-{{ $network }}
           image: "{{ $data.image.repository }}:{{ $data.image.tag }}"
           imagePullPolicy: {{ $data.image.pullPolicy }}
           resources: 
             {{- toYaml $data.resources | nindent 12 }}
-          env:
-            - name: API_URL
-              valueFrom:
-                configMapKeyRef:
-                  name: {{ include "helpers.fullname" $ }}-cm
-                  key: API_URL
-            {{ if eq $network "testnet" }}
-            - name: PROXY_TESTNET_URL
-              valueFrom:
-                configMapKeyRef:
-                  name: {{ include "helpers.fullname" $ }}-cm
-                  key: PROXY_TESTNET_URL
-            - name: RPC_TESTNET_URL
-              valueFrom:
-                configMapKeyRef:
-                  name: {{ include "helpers.fullname" $ }}-cm
-                  key: RPC_TESTNET_URL
-            {{ else if eq $network "mainnet" }}
-            - name: PROXY_MAINNET_URL
-              valueFrom:
-                configMapKeyRef:
-                  name: {{ include "helpers.fullname" $ }}-cm
-                  key: PROXY_MAINNET_URL    
-            - name: RPC_MAINNET_URL
-              valueFrom:
-                configMapKeyRef:
-                  name: {{ include "helpers.fullname" $ }}-cm
-                  key: RPC_MAINNET_URL              
+          envFrom:
+            - configMapRef:
+                name: {{ $network}}-{{ include "helpers.fullname" $ }}-rpcgateway-cm
+            {{ if $data.secret }}
+            - secretRef:
+                name: {{ $network }}-{{ include "helpers.fullname" $ }}-rpcgateway-secret
             {{ end }}
-            - name: FRONT_URL
-              valueFrom:
-                configMapKeyRef:
-                  name: {{ include "helpers.fullname" $ }}-cm
-                  key: FRONT_URL
-          {{- range $key, $val := $data.env }}
-            - name: {{ $key }}
-              value: {{ $val | quote }}
-          {{- end }}
-          {{ with $root := $ }}
-          {{- range $key, $val := $data.secret }}
-            - name: {{ $key }}
-              valueFrom:
-                secretKeyRef:
-                  name: {{ include "helpers.fullname" $root }}-proxy-{{ $network }}
-                  key: {{ $key | quote}}
-          {{- end }}
-          {{ end }}
-          ports:
-            - name: http
-              containerPort: 8001
-              protocol: TCP
+            {{ range $data.additionalSecrets }}
+            - secretRef:
+                name: {{ . }}
+            {{ end }}
           {{- if $data.livenessProbe.enabled }}
           livenessProbe:
             httpGet:
@@ -91,7 +51,12 @@ spec:
           readinessProbe:
             httpGet:
               path: {{ $data.readinessProbe.path }}
-              port: {{ $data.readinessProbe.port }}
+              {{ if eq $network "testnet" }}
+              port: {{ $.Values.env.TESTNET_NEXT_PUBLIC_RPC_GATEWAY_PORT }}
+              {{ end }}
+              {{ if eq $network "mainnet" }}
+              port: {{ $.Values.env.MAINNET_NEXT_PUBLIC_RPC_GATEWAY_PORT }}
+              {{ end }}
               scheme: HTTP
             initialDelaySeconds: {{ $data.readinessProbe.initialDelaySeconds }}
             periodSeconds: {{ $data.readinessProbe.periodSeconds }}
