--- a/charts/templates/rpc-gateway/rpcgw.ingress.yaml
+++ b/charts/templates/rpc-gateway/rpcgw.ingress.yaml
@@ -1,10 +1,10 @@
-{{ range $network, $data := .Values.proxy }}
+{{ range $network, $data := .Values.rpcgateway }}
 ---
 {{- if and $data.enabled $data.ingress.enabled }}
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: {{ include "helpers.fullname" $ }}-proxy-{{ $network }}
+  name: {{ $network }}-{{ include "helpers.fullname" $ }}-rpcgateway-ing
   namespace: {{ include "helpers.namespace" $ | quote }}
   annotations: 
     {{ toYaml $data.ingress.annotations | nindent 4 }}
@@ -12,18 +12,37 @@ metadata:
     {{ toYaml $data.ingress.labels | nindent 4 }}
 spec:
   tls:
-  - hosts: {{ $data.ingress.tls.hosts }}
+  {{ if eq $network "testnet"}}
+  - hosts: 
+      - {{ $.Values.env.TESTNET_NEXT_PUBLIC_RPC_GATEWAY_HOSTNAME }}
     secretName: {{ $data.ingress.tls.secretName }}
   rules:
-  - host: {{ $data.ingress.host }}
+  - host: {{ $.Values.env.TESTNET_NEXT_PUBLIC_RPC_GATEWAY_HOSTNAME }}
     http:
       paths:
-      - path: /
+      - path: {{ $.Values.env.TESTNET_NEXT_PUBLIC_RPC_GATEWAY_ROOT_URL}}
         pathType: Prefix
         backend:
           service:
-            name: {{ include "helpers.fullname" $ }}-proxy-{{ $network }}
+            name: {{ $network }}-{{ include "helpers.fullname" $ }}-rpcgateway-svc
             port:
-              number: {{ $data.service.ports.http }}
+              number: {{ $.Values.env.TESTNET_NEXT_PUBLIC_RPC_GATEWAY_PORT}}
+  {{ end }}
+  {{ if eq $network "mainnet"}}
+  - hosts: 
+      - {{ $.Values.env.MAINNET_NEXT_PUBLIC_RPC_GATEWAY_HOSTNAME }}
+    secretName: {{ $data.ingress.tls.secretName }}
+  rules:
+  - host: {{ $.Values.env.MAINNET_NEXT_PUBLIC_RPC_GATEWAY_HOSTNAME }}
+    http:
+      paths:
+      - path: {{ $.Values.env.MAINNET_NEXT_PUBLIC_RPC_GATEWAY_ROOT_URL}}
+        pathType: Prefix
+        backend:
+          service:
+            name: {{ $network }}-{{ include "helpers.fullname" $ }}-rpcgateway-svc
+            port:
+              number: {{ $.Values.env.MAINNET_NEXT_PUBLIC_RPC_GATEWAY_PORT}}
+  {{ end }}
 {{- end }}
 {{ end }}
