--- a/charts/templates/rpc-gateway/rpcgw.service.yaml
+++ b/charts/templates/rpc-gateway/rpcgw.service.yaml
@@ -1,12 +1,12 @@
-{{ range $network, $data := .Values.proxy }}
+{{ range $network, $data := .Values.rpcgateway }}
 ---
 {{- if $data.enabled }}
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ include "helpers.fullname" $ }}-proxy-{{ $network }}
+  name: {{ $network }}-{{ include "helpers.fullname" $ }}-rpcgateway-svc
   namespace: {{ include "helpers.namespace" $ | quote }}
-  labels: {{ include "helpers.labels.proxy" (dict "root" $ "network" $network) | nindent 4 }}
+  labels: {{ include "helpers.labels.rpcgateway" (dict "root" $ "network" $network) | nindent 4 }}
   annotations: 
     {{ toYaml $data.service.annotations | nindent 4 | trim }}
 spec:
@@ -20,14 +20,25 @@ spec:
     - {{ . | indent 4 }}
 {{- end}}
 {{- end }}
+  {{ if eq $network "testnet" }}
   ports:
-    - port:  {{ $data.service.ports.http }}
+    - port:  {{ $.Values.env.TESTNET_NEXT_PUBLIC_RPC_GATEWAY_PORT}}
       name: http
-      targetPort: {{ $data.service.ports.http }}
-{{- if eq $data.service.type "NodePort" }}
+      targetPort: {{ $.Values.env.TESTNET_NEXT_PUBLIC_RPC_GATEWAY_PORT}}
+      {{- if eq $data.service.type "NodePort" }}
       nodePort: {{ $data.service.nodePorts.http }}
-{{- end }}
+      {{- end }}
+  {{ end }}
+  {{ if eq $network "mainnet" }}
+  ports:
+    - port:  {{ $.Values.env.MAINNET_NEXT_PUBLIC_RPC_GATEWAY_PORT}}
+      name: http
+      targetPort: {{ $.Values.env.MAINNET_NEXT_PUBLIC_RPC_GATEWAY_PORT}}
+      {{- if eq $data.service.type "NodePort" }}
+      nodePort: {{ $data.service.nodePorts.http }}
+      {{- end }}
+  {{ end }}
   selector:
-{{- include "helpers.proxy.selectorLabels" (dict "root" $ "network" $network) | nindent 8 }}
+{{- include "helpers.rpcgateway.selectorLabels" (dict "root" $ "network" $network) | nindent 8 }}
 {{- end }}
 {{ end }}
