--- a/.env.example
+++ b/.env.example
@@ -1,11 +1,29 @@
-WEB_LABEL=Web
+DATABASE_HOSTNAME="localhost"
+DATABASE_PORT="5432"
+DATABASE_USER="postgres"
+DATABASE_PASSWORD="0000"
+DATABASE_NAME="tezoslink"
+
+WEB_LABEL="TezosLink"
 WEB_PORT=3000
-WEB_ROOT_URL=/
+WEB_ROOT_URL="/"
 
-API_LABEL=Api
-API_PORT=3001
-API_ROOT_URL=/api/v1
+NEXT_PUBLIC_API_HOSTNAME="http://localhost"
+NEXT_PUBLIC_API_LABEL="TezosLink API"
+NEXT_PUBLIC_API_PORT=3001
+NEXT_PUBLIC_API_ROOT_URL="/api"
 
-RPC_GATEWAY_LABEL=Rpc gateway
-RPC_GATEWAY_PORT=3002
-RPC_GATEWAY_ROOT_URL=/rpc/v1
+NEXT_PUBLIC_RPC_GATEWAY_LABEL="TezosLink RPC Gateway"
+NEXT_PUBLIC_RPC_GATEWAY_PORT=3002
+NEXT_PUBLIC_RPC_GATEWAY_ROOT_URL="/rpc"
+
+NEXT_PUBLIC_RPC_GATEWAY_MAINNET_URL="http://localhost:3002/rpc"
+NEXT_PUBLIC_RPC_GATEWAY_TESTNET_URL="http://localhost:3002/rpc"
+
+ARCHIVE_NODES_URL="https://api.tez.ie/rpc/mainnet"
+ARCHIVE_NODES_PORT=443
+ROLLING_NODES_URL="https://api.tez.ie/rpc/mainnet"
+ROLLING_NODES_PORT=443
+TEZOS_NETWORK="TESTNET"
+
+DEV_PRISMA_STUDIO_DB_URL=postgres://postgres:0000@localhost:5432/tezoslink
