--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@Pages": "./dist/pages",
     "@Common": "./dist/common",
     "@Services": "./dist/common/services",
+    "@Repositories": "./dist/common/repositories",
     "@Entries": "./dist/common/entries",
     "@Config": "./dist/common/config",
     "@Entities": "./dist/common/entities",
@@ -67,7 +68,7 @@
   },
   "devDependencies": {
     "@types/cors": "^2.8.13",
-    "@types/express": "^4.17.16",
+    "@types/express": "^4.17.17",
     "@types/node": "^18.11.18",
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
