--- a/charts/templates/web/web.cm.yaml
+++ b/charts/templates/web/web.cm.yaml
@@ -10,6 +10,6 @@ data:
   NEXT_PUBLIC_API_LABEL: {{ .Values.env.NEXT_PUBLIC_API_LABEL }}
   NEXT_PUBLIC_API_PORT: {{ quote .Values.env.NEXT_PUBLIC_API_PORT }}
   NEXT_PUBLIC_API_ROOT_URL: {{ .Values.env.NEXT_PUBLIC_API_ROOT_URL }}
-  NEXT_PUBLIC_RPC_GATEWAY_MAINNET_URL: {{ printf "http://%s:%s%s" .Values.env.MAINNET_NEXT_PUBLIC_RPC_GATEWAY_HOSTNAME .Values.env.MAINNET_NEXT_PUBLIC_RPC_GATEWAY_PORT .Values.env.MAINNET_NEXT_PUBLIC_RPC_GATEWAY_ROOT_URL}}
-  NEXT_PUBLIC_RPC_GATEWAY_TESTNET_URL: {{ printf "http://%s:%s%s" .Values.env.TESTNET_NEXT_PUBLIC_RPC_GATEWAY_HOSTNAME .Values.env.TESTNET_NEXT_PUBLIC_RPC_GATEWAY_PORT .Values.env.TESTNET_NEXT_PUBLIC_RPC_GATEWAY_ROOT_URL}}
+  NEXT_PUBLIC_RPC_GATEWAY_MAINNET_URL: {{ printf "http://%s:%v%s" .Values.env.MAINNET_NEXT_PUBLIC_RPC_GATEWAY_HOSTNAME .Values.env.MAINNET_NEXT_PUBLIC_RPC_GATEWAY_PORT .Values.env.MAINNET_NEXT_PUBLIC_RPC_GATEWAY_ROOT_URL}}
+  NEXT_PUBLIC_RPC_GATEWAY_TESTNET_URL: {{ printf "http://%s:%v%s" .Values.env.TESTNET_NEXT_PUBLIC_RPC_GATEWAY_HOSTNAME .Values.env.TESTNET_NEXT_PUBLIC_RPC_GATEWAY_PORT .Values.env.TESTNET_NEXT_PUBLIC_RPC_GATEWAY_ROOT_URL}}
   NODE_ENV: {{ .Values.env.NODE_ENV }}
