--- a/charts/templates/api/api.cm.yaml
+++ b/charts/templates/api/api.cm.yaml
@@ -41,4 +41,9 @@ data:
   ROLLING_NODES_PORT: "443"
 
   NEXT_PUBLIC_RPC_GATEWAY_TESTNET_URL: "localhost"
+  NEXT_PUBLIC_RPC_GATEWAY_MAINNET_URL: "localhost"
+  NEXT_PUBLIC_RPC_GATEWAY_HOSTNAME: "localhost"
+  NEXT_PUBLIC_RPC_GATEWAY_LABEL: "TezosLink RPC Gateway"
+  NEXT_PUBLIC_RPC_GATEWAY_PORT: "3002"
+  NEXT_PUBLIC_RPC_GATEWAY_ROOT_URL: "/rpc"
 
