--- a/charts/templates/web/web.cm.yaml
+++ b/charts/templates/web/web.cm.yaml
@@ -30,6 +30,8 @@ data:
   NEXT_PUBLIC_API_PORT: "3001"
   NEXT_PUBLIC_API_ROOT_URL: "/api"
 
+  NEXT_PUBLIC_API_URL: "http://51.158.76.139:30000/api" 
+
 
   # Concat
   # NEXT_PUBLIC_RPC_GATEWAY_MAINNET_URL: "http://localhost:3002/rpc"
@@ -41,3 +43,7 @@ data:
   ROLLING_NODES_PORT: "443"
 
   TEZOS_NETWORK: "TESTNET"
+  NEXT_PUBLIC_RPC_GATEWAY_ROOT_URL: "/rpc"
+  NEXT_PUBLIC_RPC_GATEWAY_HOSTNAME: "localhost"
+  NEXT_PUBLIC_RPC_GATEWAY_LABEL: "TezosLink RPC Gateway"
+  NEXT_PUBLIC_RPC_GATEWAY_PORT: "3002"
