--- a/Dockerfiles/Dockerfile.front
+++ b/Dockerfiles/Dockerfile.front
@@ -1,5 +1,5 @@
 # Install dependencies only when needed
-FROM node:19-alpine AS deps
+FROM node:19-alpine AS deps 
 
 WORKDIR tezosLink
 
@@ -14,6 +14,7 @@ WORKDIR tezosLink
 
 COPY . .
 COPY --from=deps tezosLink/node_modules ./node_modules
+RUN npx prisma generate
 RUN npm run build
 
 # Production image, copy all the files and run next
@@ -25,12 +26,16 @@ RUN adduser -D tezoslinkuser --uid 10000 && chown -R tezoslinkuser .
 
 COPY --from=builder --chown=tezoslinkuser tezosLink/node_modules ./node_modules
 COPY --from=builder --chown=tezoslinkuser tezosLink/public ./public
-COPY --from=builder --chown=tezoslinkuser tezosLink/dist/front ./src/front
+COPY --from=builder --chown=tezoslinkuser tezosLink/dist/common ./dist/common
+COPY --from=builder --chown=tezoslinkuser tezosLink/dist/entries ./dist/entries
+COPY --from=builder --chown=tezoslinkuser tezosLink/dist/front ./dist/front
 COPY --from=builder --chown=tezoslinkuser tezosLink/.next ./.next
+COPY --from=builder --chown=tezoslinkuser tezosLink/dist/pages ./dist/pages
 
 COPY --from=builder --chown=tezoslinkuser tezosLink/package.json ./package.json
-#COPY --from=builder --chown=tezoslinkuser src/front/next.config.js ./next.config.js 
+COPY --from=builder --chown=tezoslinkuser tezosLink/next.config.js ./next.config.js 
 
 USER tezoslinkuser
 
-CMD ["npm", "run web:start"]
+CMD ["npm", "run", "web:start"]
+EXPOSE 3000
