--- a/Dockerfiles/Dockerfile.proxy
+++ b/Dockerfiles/Dockerfile.proxy
@@ -24,10 +24,13 @@ WORKDIR tezosLink
 RUN adduser -D tezoslinkuser --uid 10000 && chown -R tezoslinkuser .
 
 COPY --from=builder --chown=tezoslinkuser tezosLink/node_modules ./node_modules
-COPY --from=builder --chown=tezoslinkuser tezosLink/dist/rpc-gateway ./src/rpc-gateway
-
+COPY --from=builder --chown=tezoslinkuser tezosLink/dist/rpc-gateway ./dist/rpc-gateway
+COPY --from=builder --chown=tezoslinkuser tezosLink/dist/entries ./dist/entries
 COPY --from=builder --chown=tezoslinkuser tezosLink/package.json ./package.json
+COPY --from=builder --chown=tezoslinkuser tezosLink/dist/common ./dist/common
+COPY --from=builder --chown=tezoslinkuser tezosLink/dist/api ./dist/api
 
 USER tezoslinkuser
 
-CMD ["npm", "run rpc-gateway:start"]
+CMD ["npm", "run", "rpc-gateway:start"]
+EXPOSE 3002
