--- a/Dockerfiles/Dockerfile.front
+++ b/Dockerfiles/Dockerfile.front
@@ -13,6 +13,8 @@ FROM node:19-alpine AS builder
 WORKDIR tezosLink
 
 COPY . .
+RUN rm .env
+RUN ls
 COPY --from=deps tezosLink/node_modules ./node_modules
 RUN npx prisma generate
 RUN npm run build
