--- a/package.json
+++ b/package.json
@@ -51,8 +51,10 @@
     "express": "^4.18.2",
     "module-alias": "^2.2.2",
     "next": "^13.1.5",
+    "node-schedule": "^2.1.1",
     "prisma": "^4.9.0",
     "prisma-query": "^2.0.0",
+    "prom-client": "^14.2.0",
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.0",
     "react-dom": "^18.2.0",
@@ -70,6 +72,7 @@
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
     "@types/node": "^18.11.18",
+    "@types/node-schedule": "^2.1.0",
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
     "@types/uuid": "^9.0.0",
