--- a/tsconfig.json
+++ b/tsconfig.json
@@ -76,8 +76,7 @@
   "include": [
     "next-env.d.ts",
     "**/*.ts",
-    "**/*.tsx"
-, "src/front/next.config.js"  ],
+    "**/*.tsx" ],
   "exclude": [
     "node_modules"
   ]
