--- a/charts/templates/web/web.cm.yaml
+++ b/charts/templates/web/web.cm.yaml
@@ -3,47 +3,20 @@ kind: ConfigMap
 metadata:
   name: {{ include "helpers.fullname" .}}-web-cm
 data:
-  WEB_LABEL: {{ .Values.env.WEB_LABEL }}
-  WEB_PORT: {{ quote .Values.env.WEB_PORT }}
-  WEB_ROOT_URL: {{ .Values.env.WEB_ROOT_URL }}
-  NEXT_PUBLIC_API_HOSTNAME: {{ printf "http://%s" .Values.env.NEXT_PUBLIC_API_HOSTNAME }}
-  NEXT_PUBLIC_API_LABEL: {{ .Values.env.NEXT_PUBLIC_API_LABEL }}
-  NEXT_PUBLIC_API_PORT: {{ quote .Values.env.NEXT_PUBLIC_API_PORT }}
-  NEXT_PUBLIC_API_ROOT_URL: {{ .Values.env.NEXT_PUBLIC_API_ROOT_URL }}
-  NEXT_PUBLIC_RPC_GATEWAY_MAINNET_URL: {{ printf "http://%s:%v%s" .Values.env.MAINNET_NEXT_PUBLIC_RPC_GATEWAY_HOSTNAME .Values.env.MAINNET_NEXT_PUBLIC_RPC_GATEWAY_PORT .Values.env.MAINNET_NEXT_PUBLIC_RPC_GATEWAY_ROOT_URL}}
-  NEXT_PUBLIC_RPC_GATEWAY_TESTNET_URL: {{ printf "http://%s:%v%s" .Values.env.TESTNET_NEXT_PUBLIC_RPC_GATEWAY_HOSTNAME .Values.env.TESTNET_NEXT_PUBLIC_RPC_GATEWAY_PORT .Values.env.TESTNET_NEXT_PUBLIC_RPC_GATEWAY_ROOT_URL}}
-  NODE_ENV: {{ .Values.env.NODE_ENV }}
-  DATABASE_HOSTNAME: "tezoslinkv2-postgresql.tezoslink-postgresql.svc.cluster.local"
-  DATABASE_PORT: "5432"
-  DATABASE_USER: "tzbackendv2"
-  DATABASE_PASSWORD: "Titi123v2"
-  DATABASE_NAME: "tezoslink"
+  {{ if .Values.env.API_PORT}}
+  NEXT_PUBLIC_API_URL: {{ printf "http://%s:%v%s" .Values.env.API_HOSTNAME .Values.env.API_PORT .Values.env.API_ROOT_URL}}
+  {{ else }}
+  NEXT_PUBLIC_API_URL: {{ printf "http://%s%s" .Values.env.API_HOSTNAME .Values.env.API_ROOT_URL}}  
+  {{ end }}
 
-  WEB_HOSTNAME: "test-web-svc.tezoslink-helm-test.svc.cluster.local"
-  WEB_LABEL: "TezosLink"
-  WEB_PORT: "3000"
-  WEB_ROOT_URL: "/"
-  NODE_ENV: production
+  {{ if .Values.env.MAINNET_RPC_GATEWAY_PORT}}
+  NEXT_PUBLIC_RPC_GATEWAY_MAINNET_URL: {{ printf "http://%s:%v%s" .Values.env.MAINNET_RPC_GATEWAY_HOSTNAME .Values.env.MAINNET_RPC_GATEWAY_PORT .Values.env.MAINNET_RPC_GATEWAY_ROOT_URL}}
+  {{ else }}
+  NEXT_PUBLIC_RPC_GATEWAY_MAINNET_URL: {{ printf "http://%s%s" .Values.env.MAINNET_RPC_GATEWAY_HOSTNAME .Values.env.MAINNET_RPC_GATEWAY_ROOT_URL}}
+  {{ end }}
 
-  NEXT_PUBLIC_API_HOSTNAME: "test-api-svc.tezoslink-helm-test.svc.cluster.local"
-  NEXT_PUBLIC_API_LABEL: "TezosLink API"
-  NEXT_PUBLIC_API_PORT: "3001"
-  NEXT_PUBLIC_API_ROOT_URL: "/api"
-
-  NEXT_PUBLIC_API_URL: "http://51.158.76.139:30000/api" 
-
-
-  # Concat
-  # NEXT_PUBLIC_RPC_GATEWAY_MAINNET_URL: "http://localhost:3002/rpc"
-  # NEXT_PUBLIC_RPC_GATEWAY_TESTNET_URL: "http://localhost:3002/rpc"
-
-  ARCHIVE_NODES_URL: "https://api.tez.ie/rpc/mainnet"
-  ARCHIVE_NODES_PORT: "443"
-  ROLLING_NODES_URL: "https://api.tez.ie/rpc/mainnet"
-  ROLLING_NODES_PORT: "443"
-
-  TEZOS_NETWORK: "TESTNET"
-  NEXT_PUBLIC_RPC_GATEWAY_ROOT_URL: "/rpc"
-  NEXT_PUBLIC_RPC_GATEWAY_HOSTNAME: "localhost"
-  NEXT_PUBLIC_RPC_GATEWAY_LABEL: "TezosLink RPC Gateway"
-  NEXT_PUBLIC_RPC_GATEWAY_PORT: "3002"
+  {{ if .Values.env.TESTNET_RPC_GATEWAY_PORT}}
+  NEXT_PUBLIC_RPC_GATEWAY_TESTNET_URL: {{ printf "http://%s:%v%s" .Values.env.TESTNET_RPC_GATEWAY_HOSTNAME .Values.env.TESTNET_RPC_GATEWAY_PORT .Values.env.TESTNET_RPC_GATEWAY_ROOT_URL}}
+  {{ else}}
+  NEXT_PUBLIC_RPC_GATEWAY_TESTNET_URL: {{ printf "http://%s%s" .Values.env.TESTNET_RPC_GATEWAY_HOSTNAME .Values.env.TESTNET_RPC_GATEWAY_ROOT_URL}}
+  {{ end }}
