:construction: WIP -  Metric & pod  Infrastructure services/entities/repositories/database schema

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,7 @@
+POSTGRES_USER="postgres"
+POSTGRES_PASSWORD="0000"
+POSTGRES_DB="tezoslink"
+
 DATABASE_HOSTNAME="localhost"
 DATABASE_PORT="5432"
 DATABASE_USER="postgres"
