--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,6 @@
-version: "3.8"
-
+version: '1'
 volumes:
-  db_storage:
-
+  db_storage: {}
 services:
   postgres:
     image: postgres:11
@@ -25,3 +23,26 @@ services:
       interval: 5s
       timeout: 5s
       retries: 10
+  tezolink-api:
+    container_name: tezolink-api
+    build:
+      context: .
+      dockerfile: ./Dockerfiles/Dockerfile.api
+    ports:
+      - '3001:3001'
+    restart: 'on-failure'
+  prometheus:
+    image: prom/prometheus:latest
+    container_name: tezolink-api-prometheus
+    restart: always
+    volumes:
+      - /etc/localtime:/etc/localtime:ro
+      - /etc/timezone:/etc/timezone:ro 
+      - ./src/common/config/prometheus/prometheus.yml':/etc/prometheus/prometheus.yml'
+    command:
+      - '--config.file=/etc/prometheus/prometheus.yml'
+    ports:
+      - '9090:9090'
+    depends_on: 
+      - tezolink-api
+
