--- a/Dockerfiles/Dockerfile.proxy
+++ b/Dockerfiles/Dockerfile.proxy
@@ -14,6 +14,7 @@ WORKDIR tezosLink
 
 COPY . .
 COPY --from=deps tezosLink/node_modules ./node_modules
+RUN npx prisma generate
 RUN npm run build
 
 # Production image, copy all the files and run next
