--- a/charts/sc.values.yaml
+++ b/charts/sc.values.yaml
@@ -6,10 +6,10 @@ global:
 
 
 env: # Environment variables injected through the config maps
-  DATABASE_HOSTNAME: "tezoslinkv2-postgresql.tezoslink-postgresql.svc.cluster.local"
+  DATABASE_HOSTNAME: "postgres-postgresql.tzlink.svc.cluster.local"
   DATABASE_PORT: "5432"
-  DATABASE_USER: "tzbackendv2"
-  DATABASE_PASSWORD: "Titi123v2"
+  DATABASE_USER: "postgres"
+  DATABASE_PASSWORD: "9MvsMkNmrh"
   DATABASE_NAME: "tezoslink"
 
   WEB_HOSTNAME: "test-web-svc.tezoslink-helm-test.svc.cluster.local"
@@ -50,14 +50,14 @@ api:
 
   image:
     repository: rg.fr-par.scw.cloud/tezoslink/p1-api # Repository containing the API image
-    tag: v1.3.10 # Version of the API image
+    tag: v1.4.0 # Version of the API image
     pullPolicy: Always 
 
   service:
-    type: ClusterIP # Service type can be: ClusterIP, NodePort or LoadBalancer
+    type: NodePort # Service type can be: ClusterIP, NodePort or LoadBalancer
     clusterIP: "" # Specify private cluster IP
     nodePorts:
-      http: "" # Node port to expose
+      http: "30000" # Node port to expose
     loadBalancerSourceRanges: [] # Source Range allow list
     annotations: {} # Service annotations
   
@@ -79,10 +79,12 @@ api:
   additionalSecrets: [] # Additional secrets to mount as environment variables
 
   resources:
-    limits: {} # CPU and memory limits
-    requests: {} # CPU and memory requests
-      # cpu: 100m
-      # memory: 256Mi
+    limits: # CPU and memory limits
+      cpu: 200m
+      memory: 256Mi
+    requests: # CPU and memory requests
+      cpu: 100m
+      memory: 128Mi
   
   podSecurityContext:
     enabled: true # Enables the pod security context 
@@ -120,7 +122,7 @@ web:
 
   image:
     repository: rg.fr-par.scw.cloud/tezoslink/p1-frontend # Repository containing the front image
-    tag: v1.3.25  # Version of the front image
+    tag: v1.4.0  # Version of the front image
     pullPolicy: Always
 
   service:
@@ -194,7 +196,7 @@ rpcgateway:
 
     image:
       repository: rg.fr-par.scw.cloud/tezoslink/p1-proxy # Repository containing the rpc gateway image
-      tag: v1.3.9  # Version of the rpc gateway image
+      tag: v1.4.0  # Version of the rpc gateway image
       pullPolicy: IfNotPresent
     
     secret: []  # Secrets to be injected as environment variables
@@ -257,7 +259,7 @@ rpcgateway:
 
   mainnet:
 
-    enabled: false # Enables the rpc service for mainnet
+    enabled: true # Enables the rpc service for mainnet
 
     replicas: 1 # Number of pods replicas desired for the rpc service for mainnet
 
@@ -265,7 +267,7 @@ rpcgateway:
 
     image:
       repository: rg.fr-par.scw.cloud/tezoslink/p1-proxy # Repository containing the rpcgateway image
-      tag: v1.3.9 # Version of the rpc gateway image
+      tag: v1.4.0 # Version of the rpc gateway image
       pullPolicy: IfNotPresent
 
     
