--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "api:dev": "nodemon -V --exec 'tsc && npm run api:start'",
     "build:test": "tsc && mocha ./dist/entries/Test.js",
     "format": "prettier --write src",
-    "migrate": ""
+    "migrate": "",
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -59,10 +60,13 @@
   "devDependencies": {
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
+    "@types/jest": "^29.5.0",
     "@types/node": "^18.11.18",
     "@types/node-schedule": "^2.1.0",
     "@types/uuid": "^9.0.0",
-    "nodemon": "^2.0.20"
+    "jest": "^29.5.0",
+    "nodemon": "^2.0.20",
+    "ts-jest": "^29.0.5"
   },
   "prisma": {
     "schema": "src/common/databases/schema.prisma"
