add a tests entry point

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -39,15 +39,16 @@
     "baseUrl": ".",
     "paths": {
       "@Api/*": ["src/api/*"],
-      "@RpcGateway/*": ["src/rpc-gateway/*"],
-      "@Services/*": ["src/common/services/*"],
-      "@Repositories/*": ["src/common/repositories/*"],
-      "@Entries/*": ["src/entries/*"],
       "@Common/*": ["src/common/*"],
       "@Config/*": ["src/common/config/*"],
-      "@Entities/*": ["src/common/ressources/*"],
-      "@System/*": ["src/common/system/*"],
       "@ControllerPattern/*": ["src/common/system/controller-pattern/*"],
+      "@Entities/*": ["src/common/ressources/*"],
+      "@Entries/*": ["src/entries/*"],
+      "@Repositories/*": ["src/common/repositories/*"],
+      "@RpcGateway/*": ["src/rpc-gateway/*"],
+      "@Services/*": ["src/common/services/*"],
+      "@System/*": ["src/common/system/*"],
+      "@Tests/*": ["src/tests/*"]
     },
     // "rootDirs": [],                       
     // "typeRoots": [],                      
