:sparkles: Dashboard routes

--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "build:test": "tsc && mocha ./dist/entries/Test.js",
     "format": "prettier --write src",
     "cron:start": "node ./dist/entries/Crons.js",
-    "cron:dev": "nodemon -V --exec 'tsc && npm run cron:start'"
+    "cron:dev": "nodemon -V --exec 'tsc && npm run cron:start'",
     "migrate:dev": "prisma migrate dev",
     "migrate:deploy": "prisma migrate deploy"
   },
