--- a/package.json
+++ b/package.json
@@ -46,12 +46,12 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "geoip-lite": "^1.4.7",
     "module-alias": "^2.2.2",
     "next": "^13.1.5",
     "node-schedule": "^2.1.1",
     "prisma": "^4.9.0",
     "prisma-query": "^2.0.0",
-    "prom-client": "^14.2.0",
     "reflect-metadata": "^0.1.13",
     "ts-node": "^10.9.1",
     "tslib": "^2.4.1",
@@ -62,6 +62,7 @@
   "devDependencies": {
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
+    "@types/geoip-lite": "^1.4.1",
     "@types/node": "^18.11.18",
     "@types/node-schedule": "^2.1.0",
     "@types/uuid": "^9.0.0",
